# codeit-moveit

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint
codeit_dev/: CMakeLists.txt  UR5.ttt
codeit_dev/include/: basicsystem.hpp  sensor_rs_camera.hpp
codeit_dev/src/: basicsystem.cpp  main.cpp  sensor_rs_camera.cpp
codeit_dev/src/function/: func_checkjs.cpp  func_moveit.cpp  func_movejs.cpp  func_obsm.cpp  func_perception.cpp
codeit_dev/src/model/: model_moveit.cpp
moveit_core/: CMakeLists.txt
moveit_core/collision_detection/: CMakeLists.txt
moveit_core/collision_detection/src/: collision_env.cpp  collision_matrix.cpp  collision_octomap_filter.cpp  world.cpp  world_diff.cpp
moveit_core/collision_detection/test/: test_world.cpp
moveit_core/collision_detection_fcl/: CMakeLists.txt
moveit_core/collision_detection_fcl/src/: collision_common.cpp  collision_detector_fcl_plugin_loader.cpp  collision_env_fcl.cpp
moveit_core/constraint_samplers/: CMakeLists.txt
moveit_core/constraint_samplers/src/: constraint_sampler.cpp  constraint_sampler_manager.cpp  constraint_sampler_tools.cpp  default_constraint_samplers.cpp  union_constraint_sampler.cpp
moveit_core/constraint_samplers/test/: pr2_arm_ik.cpp  pr2_arm_kinematics_plugin.cpp  pr2_arm_kinematics_plugin.h  test_constraint_samplers.cpp
moveit_core/controller_manager/: CMakeLists.txt
moveit_core/exceptions/: CMakeLists.txt
moveit_core/exceptions/src/: exceptions.cpp
moveit_core/kinematic_constraints/: CMakeLists.txt
moveit_core/kinematic_constraints/src/: kinematic_constraint.cpp  utils.cpp
moveit_core/kinematics_base/: CMakeLists.txt
moveit_core/kinematics_base/src/: kinematics_base.cpp
moveit_core/macros/: CMakeLists.txt
moveit_core/planning_interface/: CMakeLists.txt
moveit_core/planning_interface/src/: planning_interface.cpp  planning_response.cpp
moveit_core/planning_request_adapter/: CMakeLists.txt
moveit_core/planning_request_adapter/src/: planning_request_adapter.cpp
moveit_core/planning_scene/: CMakeLists.txt
moveit_core/planning_scene/src/: planning_scene.cpp
moveit_core/planning_scene/test/: test_planning_scene.cpp
moveit_core/profiler/: CMakeLists.txt
moveit_core/profiler/src/: profiler.cpp
moveit_core/robot_model/: CMakeLists.txt
moveit_core/robot_model/src/: fixed_joint_model.cpp  floating_joint_model.cpp  joint_model_group.cpp  planar_joint_model.cpp  prismatic_joint_model.cpp  revolute_joint_model.cpp  robot_model.cpp
moveit_core/robot_model/test/: test.cpp
moveit_core/robot_state/: CMakeLists.txt
moveit_core/robot_state/src/: attached_body.cpp  cartesian_interpolator.cpp  conversions.cpp  robot_state.cpp
moveit_core/robot_state/test/: robot_state_benchmark.cpp  robot_state_test.cpp  test_aabb.cpp  test_cartesian_interpolator.cpp  test_kinematic_complex.cpp
moveit_core/robot_trajectory/: CMakeLists.txt
moveit_core/robot_trajectory/src/: robot_trajectory.cpp
moveit_core/trajectory_processing/: CMakeLists.txt
moveit_core/trajectory_processing/src/: iterative_spline_parameterization.cpp  iterative_time_parameterization.cpp  time_optimal_trajectory_generation.cpp  trajectory_tools.cpp
moveit_core/trajectory_processing/test/: test_time_parameterization.cpp
moveit_core/transforms/: CMakeLists.txt
moveit_core/transforms/src/: transforms.cpp
moveit_core/transforms/test/: test_transforms.cpp
moveit_core/utils/: CMakeLists.txt  moveit_test_utils.cmake  moveit_utils.cmake
moveit_core/utils/src/: robot_model_test_utils.cpp
moveit_dependencies/: CMakeLists.txt
moveit_dependencies/assimp/: CMakeLists.txt
moveit_dependencies/assimp/include/: revision.h
moveit_dependencies/assimp/src/: CMakeLists.txt
moveit_dependencies/assimp/test/: CMakeLists.txt
moveit_dependencies/fcl/: CMakeLists.txt
moveit_dependencies/fcl/test/: CMakeLists.txt  test_fcl_auto_diff.cpp
moveit_dependencies/geometric_shapes/: CMakeLists.txt
moveit_dependencies/geometric_shapes/src/: bodies.cpp  shapes.cpp  (+3 more)
moveit_dependencies/googletest/: CMakeLists.txt
moveit_dependencies/kdl_parser/: CMakeLists.txt
moveit_dependencies/libccd/: CMakeLists.txt
moveit_dependencies/log_helper/: CMakeLists.txt
moveit_dependencies/moveit_resources/: CMakeLists.txt
moveit_dependencies/octomap/: CMakeLists.txt
moveit_dependencies/ompl-1.5.2/: CMakeLists.txt
moveit_dependencies/orocos_kdl/: CMakeLists.txt
moveit_dependencies/qhull/: CMakeLists.txt
moveit_dependencies/ros_msgs/: CMakeLists.txt
moveit_dependencies/roscpp_core/: CMakeLists.txt
moveit_dependencies/srdfdom/: CMakeLists.txt
moveit_dependencies/stdboost/: CMakeLists.txt
moveit_dependencies/tf2/: CMakeLists.txt
moveit_dependencies/tinyxml2/: CMakeLists.txt
moveit_dependencies/urdf/: CMakeLists.txt
moveit_dependencies/urdfdom_headers/: CMakeLists.txt
moveit_dependencies/yaml-cpp/: CMakeLists.txt
moveit_runtime/: CMakeLists.txt
moveit_runtime/constraint_sampler_manager_loader/: CMakeLists.txt
moveit_runtime/controller_plugins/: CMakeLists.txt
moveit_runtime/fake_node_handle/: CMakeLists.txt
moveit_runtime/joint_state_publisher/: CMakeLists.txt
moveit_runtime/kinematics_plugin_loader/: CMakeLists.txt
moveit_runtime/kinematics_plugins/: CMakeLists.txt
moveit_runtime/move_group/: CMakeLists.txt
moveit_runtime/moveit_runtime/: CMakeLists.txt
moveit_runtime/occupancy_map_monitor/: CMakeLists.txt
moveit_runtime/perception/: CMakeLists.txt  version.cpp
moveit_runtime/pick_place/: CMakeLists.txt
moveit_runtime/plan_execution/: CMakeLists.txt
moveit_runtime/planner_plugins/: CMakeLists.txt
moveit_runtime/planning_pipeline/: CMakeLists.txt
moveit_runtime/planning_request_adapter_plugins/: CMakeLists.txt
moveit_runtime/planning_scene_monitor/: CMakeLists.txt
moveit_runtime/plugin_loader/: CMakeLists.txt
moveit_runtime/rdf_loader/: CMakeLists.txt
moveit_runtime/robot_model_loader/: CMakeLists.txt
moveit_runtime/robot_state_publisher/: CMakeLists.txt
moveit_runtime/tf2_ros/: CMakeLists.txt
moveit_runtime/trajectory_execution_manager/: CMakeLists.txt
(+1172 files in other folders)
